add card hebergement HTML and Css

--- a/index.html
+++ b/index.html
@@ -74,8 +74,26 @@
     <!-- section hebergements et hébergements populaires-->
     <main>
       <section id="hebergements">
-        <article>
-      
+        <article class="heb-container">
+          <div class="heb-div">
+            <p>Hébergement à Marseille</p>
+          </div>
+          <div class="heb-div">
+            <a href="#">
+              <div class="img-top">
+                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+              </div>
+              <div class="heb-description">
+                <h2>Auberge la cannebière</h2>
+                <p>Nuit à partir de <strong>25€</strong></p>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="no-star"> <i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div>      
         </article>
         <aside>
         
