add popular section HTML/CSS and duplicate cards for content to lodging and popular

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           <div class="heb-div">
             <a href="#">
-              <div class="img-top">
+              <div class="img-heb">
                 <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
               </div>
               <div class="heb-description">
@@ -93,13 +93,143 @@
                 <span class="no-star"> <i class="fas fa-star"></i></span>
               </div>
             </a>
-          </div>      
+          </div>   
+           <div class="heb-div">
+            <a href="#">
+              <div class="img-heb">
+                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+              </div>
+              <div class="heb-description">
+                <h2>Auberge la cannebière</h2>
+                <p>Nuit à partir de <strong>25€</strong></p>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="no-star"> <i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div>  
+          <div class="heb-div">
+            <a href="#">
+              <div class="img-heb">
+                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+              </div>
+              <div class="heb-description">
+                <h2>Auberge la cannebière</h2>
+                <p>Nuit à partir de <strong>25€</strong></p>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="no-star"> <i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div>  
+          <div class="heb-div">
+            <a href="#">
+              <div class="img-heb">
+                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+              </div>
+              <div class="heb-description">
+                <h2>Auberge la cannebière</h2>
+                <p>Nuit à partir de <strong>25€</strong></p>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="no-star"> <i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div>  
+          <div class="heb-div">
+            <a href="#">
+              <div class="img-heb">
+                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+              </div>
+              <div class="heb-description">
+                <h2>Auberge la cannebière</h2>
+                <p>Nuit à partir de <strong>25€</strong></p>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="no-star"> <i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div>  
+          <div class="heb-div">
+            <a href="#">
+              <div class="img-heb">
+                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+              </div>
+              <div class="heb-description">
+                <h2>Auberge la cannebière</h2>
+                <p>Nuit à partir de <strong>25€</strong></p>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="no-star"> <i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div>               
         </article>
-        <aside>
-        
+        <aside class="pop-container">
+          <div class="pop-div">
+            <p class="pop-title">Les plus populaires <i class="fas fa-chart-line"></i></p>
+          </div>
+          <div class="pop-div">
+            <a href="#">
+              <div class="pop-img">
+                <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Auberge la cannebière">
+              </div>
+              <div class="pop-description">
+                <h2>Auberge la cannebière</h2>
+                <p>Nuit à partir de <strong>128€</strong></p>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div>  
+          <div class="pop-div">
+            <a href="#">
+              <div class="pop-img">
+                <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Auberge la cannebière">
+              </div>
+              <div class="pop-description">
+                <h2>Auberge la cannebière</h2>
+                <p>Nuit à partir de <strong>128€</strong></p>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="no-star"><i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div> 
+          <div class="pop-div">
+            <a href="#">
+              <div class="pop-img">
+                <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Auberge la cannebière">
+              </div>
+              <div class="pop-description">
+                <h2>Auberge la cannebière</h2>
+                <p>Nuit à partir de <strong>128€</strong></p>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="no-star"><i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div> 
         </aside>   
-      </section>
-      <section id="activity">
+     </section>
+     <section id="activity">
       
       </section>
     </main>
