change text and picture for cards content lodging

--- a/index.html
+++ b/index.html
@@ -97,11 +97,27 @@
            <div class="heb-div">
             <a href="#">
               <div class="img-heb">
-                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+                <img src="images/hebergements/4_small/Hotel du port.jpg" alt="Hotêl du port">
               </div>
               <div class="heb-description">
-                <h2>Auberge la cannebière</h2>
-                <p>Nuit à partir de <strong>25€</strong></p>
+                <h2>Hotêl du port</h2>
+                <p>Nuit à partir de <strong>52€</strong></p>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"> <i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </div>  
+          <div class="heb-div">
+            <a href="#">
+              <div class="img-heb">
+                <img src="images/hebergements/4_small/Hotel les mouettes.jpg" alt="Hotêl les mouettes">
+              </div>
+              <div class="heb-description">
+                <h2>Hotêl les mouettes</h2>
+                <p>Nuit à partir de <strong>76€</strong></p>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
@@ -113,11 +129,11 @@
           <div class="heb-div">
             <a href="#">
               <div class="img-heb">
-                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+                <img src="images/hebergements/4_small/Hotel de la mer.jpg" alt="Hotêl de la mer">
               </div>
               <div class="heb-description">
-                <h2>Auberge la cannebière</h2>
-                <p>Nuit à partir de <strong>25€</strong></p>
+                <h2>Hotêl de la mer</h2>
+                <p>Nuit à partir de <strong> 46 €</strong></p>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
@@ -129,11 +145,11 @@
           <div class="heb-div">
             <a href="#">
               <div class="img-heb">
-                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+                <img src="images/hebergements/4_small/Auberge Le Panier.jpg" alt="Auberge Le Panier">
               </div>
               <div class="heb-description">
-                <h2>Auberge la cannebière</h2>
-                <p>Nuit à partir de <strong>25€</strong></p>
+                <h2>Auberge Le Panier</h2>
+                <p>Nuit à partir de <strong>23€</strong></p>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
@@ -145,27 +161,11 @@
           <div class="heb-div">
             <a href="#">
               <div class="img-heb">
-                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+                <img src="images/hebergements/4_small/Hotel chez Amina.jpg" alt="Hotêl chez Amina">
               </div>
               <div class="heb-description">
-                <h2>Auberge la cannebière</h2>
-                <p>Nuit à partir de <strong>25€</strong></p>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="no-star"> <i class="fas fa-star"></i></span>
-              </div>
-            </a>
-          </div>  
-          <div class="heb-div">
-            <a href="#">
-              <div class="img-heb">
-                <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
-              </div>
-              <div class="heb-description">
-                <h2>Auberge la cannebière</h2>
-                <p>Nuit à partir de <strong>25€</strong></p>
+                <h2>Hotêl chez Amina</h2>
+                <p>Nuit à partir de <strong>96€</strong></p>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
@@ -182,10 +182,10 @@
           <div class="pop-div">
             <a href="#">
               <div class="pop-img">
-                <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Auberge la cannebière">
+                <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Hotêl Le soleil du matin">
               </div>
               <div class="pop-description">
-                <h2>Auberge la cannebière</h2>
+                <h2>Hotêl Le soleil du matin</h2>
                 <p>Nuit à partir de <strong>128€</strong></p>
                 <span class="star"><i class="fas fa-star"></i></span>
                 <span class="star"><i class="fas fa-star"></i></span>
@@ -198,11 +198,11 @@
           <div class="pop-div">
             <a href="#">
               <div class="pop-img">
-                <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Auberge la cannebière">
+                <img src="images/hebergements/4_small/Au coeur de l'eau.jpg" alt="Au coeur de l'eau Chambresd'hôtes">
               </div>
               <div class="pop-description">
-                <h2>Auberge la cannebière</h2>
-                <p>Nuit à partir de <strong>128€</strong></p>
+                <h2>Au coeur de l'eau Chambresd'hôtes</h2>
+                <p>Nuit à partir de <strong>71€</strong></p>
                 <span class="star"><i class="fas fa-star"></i></span>
                 <span class="star"><i class="fas fa-star"></i></span>
                 <span class="star"><i class="fas fa-star"></i></span>
@@ -214,11 +214,11 @@
           <div class="pop-div">
             <a href="#">
               <div class="pop-img">
-                <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Auberge la cannebière">
+                <img src="images/hebergements/4_small/Hotel tout bleu et blanc.jpg" alt="Hôtel Tout bleu et Blanc">
               </div>
               <div class="pop-description">
-                <h2>Auberge la cannebière</h2>
-                <p>Nuit à partir de <strong>128€</strong></p>
+                <h2>Hôtel Tout bleu et Blanc</h2>
+                <p>Nuit à partir de <strong>68€</strong></p>
                 <span class="star"><i class="fas fa-star"></i></span>
                 <span class="star"><i class="fas fa-star"></i></span>
                 <span class="star"><i class="fas fa-star"></i></span>
