--- a/index.html
+++ b/index.html
@@ -67,16 +67,15 @@
     <!-- sub-information -->
     <div class="sub-info">
       <div class="filter-icons-small flex-center"><i class="fas fa-info"></i></div>
-        <p >Plus de 500 logements sont disponibles dans la ville.</p>
+        <p>Plus de 500 logements sont disponibles dans la ville.</p>
       </div>
-    </div> 
-
+    </div>
     <!-- section hebergements et hébergements populaires-->
     <main>
       <section id="hebergements">
         <article class="heb-container">
           <div class="heb-div">
-            <p>Hébergement à Marseille</p>
+            <p class="heb-title">Hébergements à Marseille</p>
           </div>
           <div class="heb-div">
             <a href="#">
@@ -97,10 +96,10 @@
            <div class="heb-div">
             <a href="#">
               <div class="img-heb">
-                <img src="images/hebergements/4_small/Hotel du port.jpg" alt="Hotêl du port">
+                <img src="images/hebergements/4_small/Hotel du port.jpg" alt="Hôtel du port">
               </div>
               <div class="heb-description">
-                <h2>Hotêl du port</h2>
+                <h2>Hôtel du port</h2>
                 <p>Nuit à partir de <strong>52€</strong></p>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
@@ -113,10 +112,10 @@
           <div class="heb-div">
             <a href="#">
               <div class="img-heb">
-                <img src="images/hebergements/4_small/Hotel les mouettes.jpg" alt="Hotêl les mouettes">
+                <img src="images/hebergements/4_small/Hotel les mouettes.jpg" alt="Hôtel les mouettes">
               </div>
               <div class="heb-description">
-                <h2>Hotêl les mouettes</h2>
+                <h2>Hôtel les mouettes</h2>
                 <p>Nuit à partir de <strong>76€</strong></p>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
@@ -129,10 +128,10 @@
           <div class="heb-div">
             <a href="#">
               <div class="img-heb">
-                <img src="images/hebergements/4_small/Hotel de la mer.jpg" alt="Hotêl de la mer">
+                <img src="images/hebergements/4_small/Hotel de la mer.jpg" alt="Hôtel de la mer">
               </div>
               <div class="heb-description">
-                <h2>Hotêl de la mer</h2>
+                <h2>Hôtel de la mer</h2>
                 <p>Nuit à partir de <strong> 46 €</strong></p>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
@@ -148,7 +147,7 @@
                 <img src="images/hebergements/4_small/Auberge Le Panier.jpg" alt="Auberge Le Panier">
               </div>
               <div class="heb-description">
-                <h2>Auberge Le Panier</h2>
+                <h2>Auberge le panier</h2>
                 <p>Nuit à partir de <strong>23€</strong></p>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
@@ -161,10 +160,10 @@
           <div class="heb-div">
             <a href="#">
               <div class="img-heb">
-                <img src="images/hebergements/4_small/Hotel chez Amina.jpg" alt="Hotêl chez Amina">
+                <img src="images/hebergements/4_small/Hotel chez Amina.jpg" alt="Hôtel chez Amina">
               </div>
               <div class="heb-description">
-                <h2>Hotêl chez Amina</h2>
+                <h2>Hôtel chez Amina</h2>
                 <p>Nuit à partir de <strong>96€</strong></p>
                 <span class="star"> <i class="fas fa-star"></i></span>
                 <span class="star"> <i class="fas fa-star"></i></span>
@@ -173,7 +172,10 @@
                 <span class="no-star"> <i class="fas fa-star"></i></span>
               </div>
             </a>
-          </div>               
+          </div>   
+          <div class="heb-div">
+            <p class="heb-link">Afficher plus</p>
+          </div>            
         </article>
         <aside class="pop-container">
           <div class="pop-div">
@@ -182,10 +184,10 @@
           <div class="pop-div">
             <a href="#">
               <div class="pop-img">
-                <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Hotêl Le soleil du matin">
+                <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Hôtel Le soleil du matin">
               </div>
               <div class="pop-description">
-                <h2>Hotêl Le soleil du matin</h2>
+                <h2>Hôtel Le soleil du matin</h2>
                 <p>Nuit à partir de <strong>128€</strong></p>
                 <span class="star"><i class="fas fa-star"></i></span>
                 <span class="star"><i class="fas fa-star"></i></span>
@@ -201,7 +203,7 @@
                 <img src="images/hebergements/4_small/Au coeur de l'eau.jpg" alt="Au coeur de l'eau Chambresd'hôtes">
               </div>
               <div class="pop-description">
-                <h2>Au coeur de l'eau Chambresd'hôtes</h2>
+                <h2>Au coeur de l'eau Chambres d'hôtes</h2>
                 <p>Nuit à partir de <strong>71€</strong></p>
                 <span class="star"><i class="fas fa-star"></i></span>
                 <span class="star"><i class="fas fa-star"></i></span>
