refacto and change structure folder CSS. Change name of class heb-div/pop-div to heb-card/pop-card

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta description="site web booki.com" content="Site de réservation location en ligne">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/header.css"/>
+    <link rel="stylesheet" type="text/css" href="css/hebergement.css"/>
     <title>Booki</title>
     <!--Awesome Font CDN-->
     <script src="https://kit.fontawesome.com/608ae6f496.js" crossorigin="anonymous"></script>
@@ -29,7 +31,7 @@
       </div>
       <!-- title -->
       <h1 class="title">Trouver votre hebergement pour des vacances de rêve.</h1>
-      <p class="sub-title">En plein centre ville ou en plein nature</p>
+      <p class="sub-title">En plein centre ville ou en plein nature.</p>
       <!-- search form -->
       <form class="search-form flex-center">
         <div class="search-form__icon flex-center"><i class="fas fa-map-marker-alt lg flex-center"></i></div>
@@ -72,12 +74,12 @@
     </div>
     <!-- section hebergements et hébergements populaires-->
     <main>
-      <section id="hebergements">
+      <section id="hebergement">
         <article class="heb-container">
           <div class="heb-div">
             <p class="heb-title">Hébergements à Marseille</p>
           </div>
-          <div class="heb-div">
+          <div class="heb-card">
             <a href="#">
               <div class="img-heb">
                 <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
@@ -93,7 +95,7 @@
               </div>
             </a>
           </div>   
-           <div class="heb-div">
+           <div class="heb-card">
             <a href="#">
               <div class="img-heb">
                 <img src="images/hebergements/4_small/Hotel du port.jpg" alt="Hôtel du port">
@@ -109,7 +111,7 @@
               </div>
             </a>
           </div>  
-          <div class="heb-div">
+          <div class="heb-card">
             <a href="#">
               <div class="img-heb">
                 <img src="images/hebergements/4_small/Hotel les mouettes.jpg" alt="Hôtel les mouettes">
@@ -125,7 +127,7 @@
               </div>
             </a>
           </div>  
-          <div class="heb-div">
+          <div class="heb-card">
             <a href="#">
               <div class="img-heb">
                 <img src="images/hebergements/4_small/Hotel de la mer.jpg" alt="Hôtel de la mer">
@@ -141,7 +143,7 @@
               </div>
             </a>
           </div>  
-          <div class="heb-div">
+          <div class="heb-card">
             <a href="#">
               <div class="img-heb">
                 <img src="images/hebergements/4_small/Auberge Le Panier.jpg" alt="Auberge Le Panier">
@@ -157,7 +159,7 @@
               </div>
             </a>
           </div>  
-          <div class="heb-div">
+          <div class="heb-card">
             <a href="#">
               <div class="img-heb">
                 <img src="images/hebergements/4_small/Hotel chez Amina.jpg" alt="Hôtel chez Amina">
@@ -181,7 +183,7 @@
           <div class="pop-div">
             <p class="pop-title">Les plus populaires <i class="fas fa-chart-line"></i></p>
           </div>
-          <div class="pop-div">
+          <div class="pop-card">
             <a href="#">
               <div class="pop-img">
                 <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Hôtel Le soleil du matin">
@@ -231,9 +233,8 @@
           </div> 
         </aside>   
      </section>
-     <section id="activity">
-      
-      </section>
+     <section id="activité">
+     </section>
     </main>
     <!-- footer -->
     <footer>
