--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- header -->
     <header>
       <div class="nav">
-        <div class="nav-logo"><img src="images/logo/Booki.png" alt="logo booki"></div>
+        <div class="nav-logo" id="logo"><img src="images/logo/Booki.png" alt="logo booki" ></div>
         <nav>
           <ul>
             <li><a href="#hebergement" class="navlink__heb">Hebergements</a></li>
@@ -33,10 +33,10 @@
       <h1 class="title">Trouver votre hebergement pour des vacances de rêve.</h1>
       <p class="sub-title">En plein centre ville ou en plein nature.</p>
       <!-- search form -->
-      <form class="search-form flex-center">
+      <form class="search-form">
         <div class="search-form__icon flex-center"><i class="fas fa-map-marker-alt lg flex-center"></i></div>
         <input class="search-form__input" name="search" label ="recherche" type="text" placeholder="Marseille, France">
-        <button  class="search-form__btn" type="submit" value="Rechercher">Rechercher</button>
+        <button  class="search-form__btn" type="submit" value="Rechercher"id="research">Rechercher</button>
       </form>
       <!-- filter -->
       <div class="filter-cont">
@@ -72,13 +72,16 @@
         <p>Plus de 500 logements sont disponibles dans la ville.</p>
       </div>
     </div>
-    <!-- section hebergements et hébergements populaires-->
+
+    <!-- section hebergements (article) -->
     <main>
       <section id="hebergement">
         <article class="heb-container">
           <div class="heb-div">
             <p class="heb-title">Hébergements à Marseille</p>
           </div>
+          
+          <!-- cards hebergements -->
           <div class="heb-card">
             <a href="#">
               <div class="img-heb">
@@ -179,10 +182,14 @@
             <p class="heb-link">Afficher plus</p>
           </div>            
         </article>
+
+        <!-- section hébergements populaires (aside) -->
         <aside class="pop-container">
           <div class="pop-div">
             <p class="pop-title">Les plus populaires <i class="fas fa-chart-line"></i></p>
           </div>
+
+          <!-- cards hebergements populaire -->
           <div class="pop-card">
             <a href="#">
               <div class="pop-img">
@@ -232,10 +239,14 @@
             </a>
           </div> 
         </aside>   
-     </section>
-     <section id="activité">
-     </section>
+      </section>
+     
+      <!-- section activités à Marseille -->
+      <section id="activité">
+
+      </section>
     </main>
+
     <!-- footer -->
     <footer>
 
