clean code html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- header -->
     <header>
       <div class="nav">
-        <div class="nav-logo" id="logo"><img src="images/logo/Booki.png" alt="logo booki" ></div>
+        <div class="nav-logo"><img src="images/logo/Booki.png" alt="logo booki" ></div>
         <nav>
           <ul>
             <li><a href="#hebergement" class="navlink__heb">Hebergements</a></li>
@@ -30,13 +30,13 @@
         </nav>  
       </div>
       <!-- title -->
-      <h1 class="title">Trouver votre hebergement pour des vacances de rêve.</h1>
+      <h1 class="title">Trouver votre hébergement pour des vacances de rêve.</h1>
       <p class="sub-title">En plein centre ville ou en plein nature.</p>
       <!-- search form -->
       <form class="search-form">
-        <div class="search-form__icon flex-center"><i class="fas fa-map-marker-alt lg flex-center"></i></div>
+        <div class="search-form__icon flex-center"><i class="fas fa-map-marker-alt "></i></div>
         <input class="search-form__input" name="search" label ="recherche" type="text" placeholder="Marseille, France">
-        <button  class="search-form__btn" type="submit" value="Rechercher"id="research">Rechercher</button>
+        <button  class="search-form__btn" type="submit" value="Rechercher"id="search-text">Rechercher</button>
       </form>
       <!-- filter -->
       <div class="filter-cont">
@@ -90,11 +90,11 @@
               <div class="heb-description">
                 <h2>Auberge la cannebière</h2>
                 <p>Nuit à partir de <strong>25€</strong></p>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="no-star"> <i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="no-star"><i class="fas fa-star"></i></span>
               </div>
             </a>
           </div>   
@@ -106,11 +106,11 @@
               <div class="heb-description">
                 <h2>Hôtel du port</h2>
                 <p>Nuit à partir de <strong>52€</strong></p>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
               </div>
             </a>
           </div>  
@@ -122,11 +122,11 @@
               <div class="heb-description">
                 <h2>Hôtel les mouettes</h2>
                 <p>Nuit à partir de <strong>76€</strong></p>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="no-star"> <i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="no-star"><i class="fas fa-star"></i></span>
               </div>
             </a>
           </div>  
@@ -138,11 +138,11 @@
               <div class="heb-description">
                 <h2>Hôtel de la mer</h2>
                 <p>Nuit à partir de <strong> 46 €</strong></p>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="no-star"> <i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="no-star"><i class="fas fa-star"></i></span>
               </div>
             </a>
           </div>  
@@ -154,11 +154,11 @@
               <div class="heb-description">
                 <h2>Auberge le panier</h2>
                 <p>Nuit à partir de <strong>23€</strong></p>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="no-star"> <i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="no-star"><i class="fas fa-star"></i></span>
               </div>
             </a>
           </div>  
@@ -170,11 +170,11 @@
               <div class="heb-description">
                 <h2>Hôtel chez Amina</h2>
                 <p>Nuit à partir de <strong>96€</strong></p>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="star"> <i class="fas fa-star"></i></span>
-                <span class="no-star"> <i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="no-star"><i class="fas fa-star"></i></span>
               </div>
             </a>
           </div>   
