add footer html,CSS with link in meta and responsive design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="stylesheet" type="text/css" href="css/header.css"/>
     <link rel="stylesheet" type="text/css" href="css/hebergement.css"/>
+    <link rel="stylesheet" type="text/css" href="css/footer.css"/>
     <title>Booki</title>
     <!--Awesome Font CDN-->
     <script src="https://kit.fontawesome.com/608ae6f496.js" crossorigin="anonymous"></script>
@@ -264,28 +265,24 @@
 
       <!-- footer -->
       <footer>
-        <div class="footer-container">
-        <h3 class="footer-title">A propos</h3>
-          <ul>
+        <section class="ment-container">
+          <ul class="mentions">
+            <li><h3>A propos</h3></li>
             <li>Fontionnement du site</li>
             <li>Conditions générales de ventes</li>
             <li>Données et confidentialité</li>
           </ul>
-        </div>
-        <div class="footer-container">
-        <h3 class="footer-title">Nos hebergements</h3>
-          <ul>
+          <ul class="mentions">
+            <li><h3>Nos herbergements</h3></li>
             <li>Charte qualité</li>
             <li>Soumettre votre Hôtel</li>
           </ul>
-        </div>
-        <div class="footer-container">
-        <h3 class="footer-title">Assitance</h3>
-          <ul>
+          <ul class="mentions">
+            <li><h3>Assistance</h3></li>
             <li>Centre d'aide</li>
             <li>Nous contacter</li>
           </ul>
-        </div>
+        </section>
       </footer>
     </div>
   </body>
