responsive design for heb section

--- a/index.html
+++ b/index.html
@@ -51,35 +51,36 @@
             </button>
           </div>
         </form>
-        <!-- filter -->
-        <div class="filter-cont">
-          <h3 class="filter-title">Filtres</h3>
+        <!-- section filter -->
+        <div id="filter-cont">
+          <div class="filter-title">
+            <h3>Filtres</h3>
+          </div>
+          <div class="filter">
+            <span class="filter-icon">
+              <i class="fas fa-money-bill-wave"></i>
+            </span>
+            <a class="filter-btn" href="#"> Economique </a>
+          </div>
+          <div class="filter">
+            <span class="filter-icon">
+              <i class="fas fa-child"></i>
+            </span>
+            <a class="filter-btn" href="#"> Familial</a>
+          </div>
+          <div class="filter">
+            <span class="filter-icon">
+              <i class="fas fa-heart"></i>
+            </span>
+            <a class="filter-btn" href="#"> Romantique </a>
+          </div>
+          <div class="filter">
+            <span class="filter-icon">
+              <i class="fas fa-dog"></i>
+            </span>
+            <a class="filter-btn" href="#"> Animaux autorisés </a>
+          </div>
         </div>
-        <div class="filter-cont">
-          <!-- <h3 class="filter-title">Filtres</h3> -->
-          <div class="filter-btn">
-            <div class="filter-icons flex-center"><i class="fas fa-money-bill-wave"></i></div>
-            <h3 class="filter-text flex-center ">Economique</h3>
-          </div>
-        <div>
-        <div class="filter-cont">
-          <div class="filter-btn ">
-            <div class="filter-icons flex-center"><i class="fas fa-child"></i></div>
-            <h3 class="filter-text flex-center">Familial</h3>
-          </div>
-        <div>
-        <div class="filter-cont">
-          <div class=filter-btn>
-            <div class="filter-icons flex-center"><i class="fas fa-heart"></i></div>
-            <h3 class="filter-text flex-center">Romantique</h3>
-          </div>
-        <div>
-        <div class="filter-cont">
-          <div class=filter-btn>
-            <div class="filter-icons flex-center"><i class="fas fa-dog"></i></div>
-            <h3 class="filter-text flex-center">Animaux autorisés</h3>
-          </div>  
-        <div>
       </header>
 
       <!-- sub-information -->
@@ -206,7 +207,7 @@
             </div>
 
             <!-- cards hebergements populaire -->
-            <div class="pop-card">
+            <div class="pop-div">
               <a href="#">
                 <div class="pop-img">
                   <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Hôtel Le soleil du matin">
