--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <!-- search form -->
         <form id="search-bar">
           <div class="map-img">
-            <span id="map-icon">
+            <div id="map-icon">
               <i class="fas fa-map-marker-alt"></i>
-            </span>
+            </div>
           </div>
           <div id="map-input">
           <input type="search" id="search-input" placeholder="Marseille, France"/>
@@ -80,15 +80,15 @@
             </span>
             <a class="filter-btn" href="#"> Animaux autorisés </a>
           </div>
-        </div>
       </header>
 
       <!-- sub-information -->
       <div class="sub-info">
-        <div class="filter-icons-small flex-center"><i class="fas fa-info"></i></div>
-          <p>Plus de 500 logements sont disponibles dans la ville.</p>
+        <div class="filter-icons-small flex-center">
+          <i class="fas fa-info"></i>
         </div>
-      </div>
+        <p>Plus de 500 logements sont disponibles dans la ville.</p>
+      </div>      
 
       <!-- section hebergements (article) -->
       <main>
@@ -259,32 +259,68 @@
         </section>
       
         <!-- section activités à Marseille -->
+        <h2>Activités à Marseille</h2>
         <section id="activité">
-
+          <div class="act-container">
+            <a href="#">
+              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port"/>
+              <h2>Vieux port</h2>
+            </a>            
+          </div>
+          <div class="act-container">
+            <a href="#">
+              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Fort de Pomègues"/>
+              <h2>Fort de Pomègues</h2>
+            </a>            
+          </div>
+          <div class="act-container">
+            <a href="#">
+              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="îles du Frioul"/>
+              <h2>îles  de Frioul</h2>
+            </a>            
+          </div>
+          <div class="act-container">
+            <a href="#">
+              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Parc National des Calanques"/>
+              <h2>Parc National des Calanques</h2>
+            </a>            
+          </div>
+          <div class="act-container">
+            <a href="#">
+              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
+              <h2>Notre-Dame-de-la-Garde</h2>
+            </a>            
+          </div>
+          <div class="act-container">
+            <a href="#">
+              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Parc Longchamp"/>
+              <h2>Parc Longchamp</h2>
+            </a>            
+          </div>
         </section>
       </main>
-
-      <!-- footer -->
-      <footer>
-        <section class="ment-container">
-          <ul class="mentions">
-            <li><h3>A propos</h3></li>
-            <li>Fontionnement du site</li>
-            <li>Conditions générales de ventes</li>
-            <li>Données et confidentialité</li>
-          </ul>
-          <ul class="mentions">
-            <li><h3>Nos herbergements</h3></li>
-            <li>Charte qualité</li>
-            <li>Soumettre votre Hôtel</li>
-          </ul>
-          <ul class="mentions">
-            <li><h3>Assistance</h3></li>
-            <li>Centre d'aide</li>
-            <li>Nous contacter</li>
-          </ul>
-        </section>
-      </footer>
     </div>
+
+    <!-- footer -->
+    <footer>
+      <section class="ment-container">
+        <ul class="mentions">
+          <li><h3>A propos</h3></li>
+          <li>Fontionnement du site</li>
+          <li>Conditions générales de ventes</li>
+          <li>Données et confidentialité</li>
+        </ul>
+        <ul class="mentions">
+          <li><h3>Nos herbergements</h3></li>
+          <li>Charte qualité</li>
+          <li>Soumettre votre Hôtel</li>
+        </ul>
+        <ul class="mentions">
+          <li><h3>Assistance</h3></li>
+          <li>Centre d'aide</li>
+          <li>Nous contacter</li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
