add css for activity and clean code for desktop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="stylesheet" type="text/css" href="css/header.css"/>
     <link rel="stylesheet" type="text/css" href="css/hebergement.css"/>
+    <link rel="stylesheet" type="text/css" href="css/activité.css"/>
     <link rel="stylesheet" type="text/css" href="css/footer.css"/>
     <title>Booki</title>
     <!--Awesome Font CDN-->
@@ -42,7 +43,7 @@
             </div>
           </div>
           <div id="map-input">
-          <input type="search" id="search-input" placeholder="Marseille, France"/>
+            <input type="search" id="search-input" placeholder="Marseille, France"/>
           </div>
           <div id="map-btn">
             <button id="map-marker">
@@ -85,7 +86,7 @@
       <!-- sub-information -->
       <div class="sub-info">
         <div class="filter-icons-small flex-center">
-          <i class="fas fa-info"></i>
+          <i class="fas fa-info flex-center"></i>
         </div>
         <p>Plus de 500 logements sont disponibles dans la ville.</p>
       </div>      
@@ -259,43 +260,55 @@
         </section>
       
         <!-- section activités à Marseille -->
-        <h2>Activités à Marseille</h2>
-        <section id="activité">
-          <div class="act-container">
+        <h2 id="activity" class="act-title">Activités à Marseille</h2>
+        <section class="act-container">
+          <div class="act-div">
             <a href="#">
-              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port"/>
-              <h2>Vieux port</h2>
-            </a>            
+              <picture>
+                <img src="images/activites/4_small/Vieux port.jpg" alt="Vieux Port">
+              </picture>
+              <h3 class="act-subtitle">Vieux Port</h3>
+            </a>
           </div>
-          <div class="act-container">
+          <div class="act-div">
             <a href="#">
-              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Fort de Pomègues"/>
-              <h2>Fort de Pomègues</h2>
-            </a>            
+              <picture>
+                <img src="images/activites/4_small/Fort de Pomègue.jpg" alt="Fort de Pomègue">
+              </picture>
+              <h3 class="act-subtitle">Fort de Pomègue</h3>
+            </a>
           </div>
-          <div class="act-container">
+          <div class="act-div">
             <a href="#">
-              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="îles du Frioul"/>
-              <h2>îles  de Frioul</h2>
-            </a>            
+              <picture>
+                <img src="images/activites/4_small/îles du Frioul.jpg" alt="îles du Frioul">
+              </picture>
+              <h3 class="act-subtitle">îles du Frioul</h3>
+            </a>
           </div>
-          <div class="act-container">
+          <div class="act-div">
             <a href="#">
-              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Parc National des Calanques"/>
-              <h2>Parc National des Calanques</h2>
-            </a>            
+              <picture>
+                <img src="images/activites/4_small/Parc National des calanques.jpg" alt="Parc National des calanques">
+              </picture>
+              <h3 class="act-subtitle">Parc National des calanques</h3>
+            </a>
           </div>
-          <div class="act-container">
+          <div class="act-div">
             <a href="#">
-              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
-              <h2>Notre-Dame-de-la-Garde</h2>
-            </a>            
+              <picture>
+                <img src="images/activites/4_small/Notre Dame de la Garde.jpg" alt="Notre Dame de la Garde">
+              </picture>
+              <h3 class="act-subtitle">Notre Dame de la Garde</h3>
+            </a>
           </div>
-          <div class="act-container">
+          <div class="act-div">
             <a href="#">
-              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Parc Longchamp"/>
-              <h2>Parc Longchamp</h2>
-            </a>            
+              <picture>
+                <img src="images/activites/4_small/Parc Longchamp.jpg" alt="Parc Longchamp">
+              </picture>
+              <h3 class="act-subtitle">Parc Longchamp</h3>
+            </a>
           </div>
         </section>
       </main>
