--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="stylesheet" type="text/css" href="css/header.css"/>
     <link rel="stylesheet" type="text/css" href="css/hebergement.css"/>
-    <link rel="stylesheet" type="text/css" href="css/activité.css"/>
+    <link rel="stylesheet" type="text/css" href="css/activity.css"/>
     <link rel="stylesheet" type="text/css" href="css/footer.css"/>
     <title>Booki</title>
     <!--Awesome Font CDN-->
@@ -24,11 +24,11 @@
       <!-- header -->
       <header>
         <div class="nav">
-          <div class="nav-logo"><img src="images/logo/Booki.png" alt="logo booki" ></div>
+        <div class="nav-logo"><img src="images/logo/Booki.png" alt="logo booki"></div>
           <nav>
             <ul>
               <li class="active"><a href="#hebergement" class="navlink__heb">Hebergements</a></li>
-              <li><a href="#activité" class="navlink__act">Activités</a></li>
+              <li><a href="#activity" class="navlink__act">Activités</a></li>
             </ul>
           </nav>  
         </div>
@@ -86,7 +86,7 @@
       <!-- sub-information -->
       <div class="sub-info">
         <div class="filter-icons-small flex-center">
-          <i class="fas fa-info flex-center"></i>
+          <i class="fas fa-info"></i>
         </div>
         <p>Plus de 500 logements sont disponibles dans la ville.</p>
       </div>      
@@ -264,50 +264,50 @@
         <section class="act-container">
           <div class="act-div">
             <a href="#">
-              <picture>
-                <img src="images/activites/4_small/Vieux port.jpg" alt="Vieux Port">
-              </picture>
-              <h3 class="act-subtitle">Vieux Port</h3>
+              <picture><img src="images/activites/4_small/Vieux port.jpg" alt="Vieux Port"></picture>
+              <div class="act-subtitle">
+                <h3>Vieux Port</h3>
+              </div>
             </a>
           </div>
           <div class="act-div">
             <a href="#">
-              <picture>
-                <img src="images/activites/4_small/Fort de Pomègue.jpg" alt="Fort de Pomègue">
-              </picture>
-              <h3 class="act-subtitle">Fort de Pomègue</h3>
+              <picture><img src="images/activites/4_small/Fort de Pomègue.jpg" alt="Fort de Pomègue"></picture>
+              <div class="act-subtitle">
+                <h3>Fort de Pomègue</h3>
+              </div>
             </a>
           </div>
           <div class="act-div">
             <a href="#">
-              <picture>
-                <img src="images/activites/4_small/îles du Frioul.jpg" alt="îles du Frioul">
-              </picture>
-              <h3 class="act-subtitle">îles du Frioul</h3>
+              <picture><img src="images/activites/4_small/îles du Frioul.jpg" alt="îles du Frioul"></picture>
+              <div class="act-subtitle">
+                <h3>îles du Frioul</h3>
+              </div>
             </a>
           </div>
           <div class="act-div">
             <a href="#">
-              <picture>
-                <img src="images/activites/4_small/Parc National des calanques.jpg" alt="Parc National des calanques">
-              </picture>
-              <h3 class="act-subtitle">Parc National des calanques</h3>
+              <picture><img src="images/activites/4_small/Parc National des calanques.jpg" alt="Parc National des calanques"></picture>
+              <div class="act-subtitle">
+                <h3>Parc National des calanques</h3>
+              </div>
             </a>
           </div>
           <div class="act-div">
             <a href="#">
-              <picture>
-                <img src="images/activites/4_small/Notre Dame de la Garde.jpg" alt="Notre Dame de la Garde">
-              </picture>
-              <h3 class="act-subtitle">Notre Dame de la Garde</h3>
+              <picture><img src="images/activites/4_small/Notre Dame de la Garde.jpg" alt="Notre Dame de la Garde"></picture>
+              <div class="act-subtitle">
+                <h3>Notre Dame de la Garde</h3>
+              </div>
             </a>
           </div>
           <div class="act-div">
             <a href="#">
-              <picture>
-                <img src="images/activites/4_small/Parc Longchamp.jpg" alt="Parc Longchamp">
-              </picture>
-              <h3 class="act-subtitle">Parc Longchamp</h3>
+              <picture><img src="images/activites/4_small/Parc Longchamp.jpg" alt="Parc Longchamp"></picture>
+              <div class="act-subtitle">
+                <h3>Parc Longchamp</h3>
+              </div>
             </a>
           </div>
         </section>
@@ -318,18 +318,18 @@
     <footer>
       <section class="ment-container">
         <ul class="mentions">
-          <li><h3>A propos</h3></li>
+          <li><h3 class="footer-title">A propos</h3></li>
           <li>Fontionnement du site</li>
           <li>Conditions générales de ventes</li>
           <li>Données et confidentialité</li>
         </ul>
         <ul class="mentions">
-          <li><h3>Nos herbergements</h3></li>
+          <li><h3 class="footer-title">Nos herbergements</h3></li>
           <li>Charte qualité</li>
           <li>Soumettre votre Hôtel</li>
         </ul>
         <ul class="mentions">
-          <li><h3>Assistance</h3></li>
+          <li><h3 class="footer-title">Assistance</h3></li>
           <li>Centre d'aide</li>
           <li>Nous contacter</li>
         </ul>
