clean code HTML

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <a href="#">
               <picture><img src="images/activites/4_small/Parc National des calanques.jpg" alt="Parc National des calanques"></picture>
               <div class="act-subtitle">
-                <h3>Parc National des calanques</h3>
+                <h3>Parc National des Calanques</h3>
               </div>
             </a>
           </div>
@@ -298,7 +298,7 @@
             <a href="#">
               <picture><img src="images/activites/4_small/Notre Dame de la Garde.jpg" alt="Notre Dame de la Garde"></picture>
               <div class="act-subtitle">
-                <h3>Notre Dame de la Garde</h3>
+                <h3>Notre-Dame-de-la-Garde</h3>
               </div>
             </a>
           </div>
