change activity colum

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   </head>
 
   <body>
-    <div class="container">
       <!-- header -->
+    <div class="container">
       <header>
         <div class="nav">
-        <div class="nav-logo"><img src="images/logo/Booki.png" alt="logo booki"></div>
+        <div class="nav-logo"><img src="images/logo/Booki@3x.png" alt="logo booki"></div>
           <nav>
             <ul>
-              <li class="active"><a href="#hebergement" class="navlink__heb">Hebergements</a></li>
+              <li class="active"><a href="#hebergement" class="navlink__heb">Hébergements</a></li>
               <li><a href="#activity" class="navlink__act">Activités</a></li>
             </ul>
           </nav>  
@@ -82,6 +82,7 @@
             <a class="filter-btn" href="#"> Animaux autorisés </a>
           </div>
       </header>
+    
 
       <!-- sub-information -->
       <div class="sub-info">
